--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,7 @@
-
+<html>
+  <head>
+    <title> About Lessa Hayes </title>
+  </head>
+  <body> 
+    <h1> About me, Lessa Hayes </h1>
+    <h2> Hi, I'm Lessa Hayes! I'm K.J. Apa's wife! </h2>
