--- a/aboutme.html
+++ b/aboutme.html
@@ -3,5 +3,10 @@
     <title> About Lessa Hayes </title>
   </head>
   <body> 
-    <h1> About me, Lessa Hayes </h1>
-    <h2> Hi, I'm Lessa Hayes! I'm K.J. Apa's wife! </h2>
+    <h1> About me, Lessa Hayes! </h1>
+    <p> Hi, I'm Lessa Hayes! Thanks for clicking on my site. Get ready for an adventure! </p>
+    <h1> Here's a little bit about me: </h1>
+    <p> A lot of stuff. </p>
+ </html>
+
+  
