--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
   </head>
   <body> 
     <h1> About me, Lessa Hayes! </h1>
-    <img src="Prof Pic" alt="https://www.instagram.com/p/BViCm6HASr2vgA88nnxe7jjGpqNXw_iFxBIpnQ0/?taken-by=lessahayes" width="104" height="142">
+    <img src="Snapchat-1904412526.jpg" alt="This is a picture of me!" width="104" height="142">
     <p> Hi, I'm Lessa Hayes! Thanks for clicking on my site. Get ready for an adventure! </p>
     <h1> Here's a little bit about me: </h1>
     <p> A lot of stuff. </p>
