--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> About Lessa Hayes </title>
+    <title> Lessa Hayes </title>
   </head>
   <body> 
     <h1> About me, Lessa Hayes! </h1>
