--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,11 @@
     <p> Hi, I'm Lessa Hayes! Thanks for clicking on my site. Get ready for an adventure! </p>
     <h1> Here's a little bit about me: </h1>
     <p> A lot of stuff. </p>
+    <h1> I like/love: </h1>
+    <p> KJ Apa </p>
+    <p> Riverdale </p>
+    <p> Gotham </p>
+    <p> Write </p>
     
  </html>
 
