--- a/aboutme.html
+++ b/aboutme.html
@@ -11,8 +11,10 @@
     <h1> I like/love: </h1>
     <p> KJ Apa </p>
     <p> Riverdale </p>
+    <p> Supernatural </p>
     <p> Gotham </p>
     <p> Write </p>
+    <p> Movies </p>
     <h1> Dislikes </h1>
     
  </html>
