--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     <p> A lot of stuff. </p>
     <h1> I like/love: </h1>
     <p> KJ Apa </p>
-    <img src="https://www.google.com/search?q=kj+apa+quotes&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjkrt_PpYHVAhXKPj4KHddfCBsQ_AUICigB&biw=1279&bih=638#imgrc=3kmRwa_CT1muEM:" alt="KJ Apa <3" width="200" height="142"
+    <img src="" alt="KJ Apa <3" width="200" height="142"
     <p> Riverdale </p>
     <p> Supernatural </p>
     <p> Gotham </p>
