--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     <p> A lot of stuff. </p>
     <h1> I like/love: </h1>
     <p> KJ Apa </p>
-    <img src="" alt="KJ Apa <3" width="200" height="142"
+    <img src="Screen Shot 2017-07-11 at 9.37.32 AM.png" alt="KJ Apa <3" width="200" height="142"
     <p> Riverdale </p>
     <p> Supernatural </p>
     <p> Gotham </p>
