--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,10 @@
 <html>
+  <center>
   <head>
     <title> Lessa Hayes </title>
   </head>
   <body> 
+    <body style="background-color:powderblue;">
     <h1> About me, Lessa Hayes! </h1>
     <img src="Snapchat-1904412526.jpg" alt="This is a picture of me!" width="250" height="142">
     <p> Hi, I'm Lessa Hayes! Thanks for clicking on my site. Get ready for an adventure! </p>
@@ -10,7 +12,8 @@
     <p> A lot of stuff. </p>
     <h1> I like/love: </h1>
     <p> KJ Apa </p>
-    <img src="Screen Shot 2017-07-11 at 9.37.32 AM.png" alt="KJ Apa <3" width="200" height="142"
+    <img src="Screen Shot 2017-07-11 at 9.37.32 AM.png" alt="KJ Apa <3" width="250" height="142">
+      <br /><br />
     <p> Riverdale </p>
     <p> Supernatural </p>
     <p> Gotham </p>
@@ -20,6 +23,7 @@
     <p> Haterz </p>
     <p> Snakes </p>
     <p> People wasting my time </p>
+    </center>
  </html>
 
   
