--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <title> Lessa Hayes </title>
   </head>
   <body> 
-    <body style="background-color:powderblue;">
+    <body style="background-color:lightskyblue;">
     <h1> About me, Lessa Hayes! </h1>
     <img src="Snapchat-1904412526.jpg" alt="This is a picture of me!" width="250" height="142">
     <p> Hi, I'm Lessa Hayes! Thanks for clicking on my site. Get ready for an adventure! </p>
@@ -15,6 +15,7 @@
     <img src="Screen Shot 2017-07-11 at 9.37.32 AM.png" alt="KJ Apa <3" width="250" height="142">
       <br /><br />
     <p> Riverdale </p>
+      <img src="
     <p> Supernatural </p>
     <p> Gotham </p>
     <p> Write </p>
