--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
   </head>
   <body> 
     <body style="background-color:lightskyblue;">
-    <h1> About me, Lessa Hayes! </h1>
+    <h1> <font face= "Times New Roman">About me, Lessa Hayes!> </font> </h1>
     <img src="Snapchat-1904412526.jpg" alt="This is a picture of me!" width="250" height="142">
     <p> Hi, I'm Lessa Hayes! Thanks for clicking on my site. Get ready for an adventure! </p>
     <h1> Here's a little bit about me: </h1>
@@ -20,7 +20,7 @@
       <img src="Screen Shot 2017-07-11 at 9.59.31 AM.png" alt="Supernatural" width="250" height="142">
     <p> One Direction </p>
     <p> Gotham </p>
-    <p> Write </p>
+    <p> To Write </p>
     <p> Movies </p>
     <h1> Dislikes </h1>
     <p> Haterz </p>
