--- a/aboutme.html
+++ b/aboutme.html
@@ -18,8 +18,8 @@
       <img src="Screen Shot 2017-07-11 at 9.57.39 AM.png" alt:"Riverdale" width="250" height="142"> 
     <p> Supernatural </p>
       <img src="Screen Shot 2017-07-11 at 9.59.31 AM.png" alt="Supernatural" width="250" height="142">
-    <p> One Direction </p>
-      <img src=
+    <p> One Direction (Zayn too!) </p>
+      <img src="Screen Shot 2017-07-11 at 10.20.51 AM.png" alt="One Direction" width="250" height"142">
     <p> Gotham </p>
     <p> To Write </p>
     <p> Movies </p>
