--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
     <img src="Snapchat-1904412526.jpg" alt="This is a picture of me!" width="250" height="142">
     <p> Hi, I'm Lessa Hayes! Thanks for clicking on my site. Get ready for an adventure! </p>
     <h1> Here's a little bit about me: </h1>
-    <p> A lot of stuff. </p>
+    <p> I'm an autumn baby who goes to Curtis High School and is in the IB program! I'm the middle child of seven children (number 4). My favorite show is Riverdale. I love KJ Apa! <3 <3 </p>
     <h1> I like/love: </h1>
     <p> KJ Apa </p>
     <img src="Screen Shot 2017-07-11 at 9.37.32 AM.png" alt="KJ Apa <3" width="250" height="142">
