--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,11 @@
     <p> Hi, I'm Lessa Hayes! Thanks for clicking on my site. Get ready for an adventure! </p>
     <h1> Here's a little bit about me: </h1>
     <p> I'm an autumn baby who goes to Curtis High School and is in the IB program! I'm the middle child of seven children (number 4). My favorite show is Riverdale. I love KJ Apa! <3 <3 </p>
-    <h1> I like/love: </h1>
+    <h1> Here's the link to my favorite sites: <h1>
+      <a href="https://twitter.com/kj_apa?lang=en"> KJ's Twitter </a>
+                <br /><br />
+      <a href="https://www.instagram.com/kjapa/?hl=en"> KJ's Instagram </a>
+      <h1> I like/love: </h1>
     <p> KJ Apa </p>
     <img src="Screen Shot 2017-07-11 at 9.37.32 AM.png" alt="KJ Apa <3" width="250" height="142">
       <br /><br />
@@ -21,6 +25,7 @@
     <p> One Direction (Zayn too!) </p>
       <img src="Screen Shot 2017-07-11 at 10.20.51 AM.png" alt="One Direction" width="250" height"152">
     <p> Gotham </p>
+      <img src="
     <p> To Write </p>
     <p> Movies </p>
     <h1> Dislikes </h1>
