--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
     <p> One Direction (Zayn too!) </p>
       <img src="Screen Shot 2017-07-11 at 10.20.51 AM.png" alt="One Direction" width="250" height"152">
     <p> Gotham </p>
-      <img src="
+      <img src="Screen Shot 2017-07-11 at 10.24.36 AM.png" alt="Gotham" width="250" height"152">
     <p> To Write </p>
     <p> Movies </p>
     <h1> Dislikes </h1>
