--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
     <p> Gotham </p>
       <img src="Screen Shot 2017-07-11 at 10.24.36 AM.png" alt="Gotham" width="250" height"152">
     <p> To Write </p>
-    <p> Movies </p>
+    <p> Movies (Comics most of the time)(😉😉) </p>
     <h1> Dislikes </h1>
     <p> Haterz </p>
     <p> Snakes </p>
