--- a/aboutme.html
+++ b/aboutme.html
@@ -27,9 +27,10 @@
     <p> Gotham </p>
       <img src="Screen Shot 2017-07-11 at 10.24.36 AM.png" alt="Gotham" width="250" height"152">
     <p> To Write </p>
-    <p> Movies (Comics most of the time)(😉😉) </p>
+    <p> Movies (Comics most of the time)(😉 😉) </p>
     <h1> Dislikes </h1>
     <p> Haterz </p>
+      <img src="Screen Shot 2017-07-11 at 10.39.14 AM.png" alt="No Hatorade Sold Here" width="250" height="152">
     <p> Snakes </p>
     <p> People wasting my time </p>
     </center>
