--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,10 @@
     <p> Hi, I'm Lessa Hayes! Thanks for clicking on my site. Get ready for an adventure! </p>
     <h1> Here's a little bit about me: </h1>
     <p> I'm an autumn baby who goes to Curtis High School and is in the IB program! I'm the middle child of seven children (number 4). My favorite show is Riverdale. I love KJ Apa! <3 <3 </p>
-    <h1> Here are the links to my favorite sites: <h1>
+      <h1> Find out more about me on my social medias (😍 😍): </h1>
+      <img src="snapchat-logo-vector-download-free-icon-0.png" alt="Snapchat logo" width="225" height="132">
+      <p> @alessahayes </p>
+      <h1> Here are the links to my favorite sites: <h1>
       <a href="https://twitter.com/kj_apa?lang=en"> KJ's Twitter </a>
                 <br /><br />
       <a href="https://www.instagram.com/kjapa/?hl=en"> KJ's Instagram </a>
@@ -31,7 +34,7 @@
     <h1> Dislikes </h1>
     <p> Haterz </p>
       <img src="Screen Shot 2017-07-11 at 10.39.14 AM.png" alt="No Hatorade Sold Here" width="250" height="152">
-    <p> Snakes </p>
+    <p> Snakes (can't even put a picture of them on my website) </p>
     <p> People wasting my time </p>
     </center>
  </html>
