--- a/aboutme.html
+++ b/aboutme.html
@@ -11,8 +11,10 @@
     <h1> Here's a little bit about me: </h1>
     <p> I'm an autumn baby who goes to Curtis High School and is in the IB program! I'm the middle child of seven children (number 4). My favorite show is Riverdale. I love KJ Apa! <3 <3 </p>
       <h1> Find out more about me on my social medias (😍 😍): </h1>
-      <img src="snapchat-logo-vector-download-free-icon-0.png" alt="Snapchat logo" width="225" height="132">
+      <img src="snapchat-logo-vector-download-free-icon-0.png" alt="Snapchat Logo" width="225" height="132">
       <p> @alessahayes </p>
+      <img src="07f0d7b69ef071571e4ada2f4d6a053a-instagram-icon-background-by-vexels.png" alt="Instagram Logo" width="225" height="132"
+           <a href="https://www.instagram.com/lessahayes/"> <Lessa's Instagram </a>
       <h1> Here are the links to my favorite sites: <h1>
       <a href="https://twitter.com/kj_apa?lang=en"> KJ's Twitter </a>
                 <br /><br />
