--- a/aboutme.html
+++ b/aboutme.html
@@ -13,8 +13,10 @@
       <h1> Find out more about me on my social medias (😍 😍): </h1>
       <img src="snapchat-logo-vector-download-free-icon-0.png" alt="Snapchat Logo" width="225" height="132">
       <p> @alessahayes </p>
-      <img src="07f0d7b69ef071571e4ada2f4d6a053a-instagram-icon-background-by-vexels.png" alt="Instagram Logo" width="225" height="142"
+      <img src="07f0d7b69ef071571e4ada2f4d6a053a-instagram-icon-background-by-vexels.png" alt="Instagram Logo" width="225" height="152"
+    <center>
            <a href="https://www.instagram.com/lessahayes/"> Lessa's Instagram </a>
+    </center>
       <h1> Here are the links to my favorite sites: <h1>
       <a href="https://twitter.com/kj_apa?lang=en"> KJ's Twitter </a>
                 <br /><br />
